--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			<section id="header">
 				<header>
 					<h1>Mary Howell</h1>
-					<p>Full Stack Developer </br> Ruby, Rails, Javascript, React/Redux</p>
+					<p>Software Developer </br> Ruby, Rails, Javascript, React/Redux</p>
 				</header>
 				<footer>
 					<a href="#banner" class="button style2 scrolly-middle">Personal Bio</a>
