adding resume to site

--- a/index.html
+++ b/index.html
@@ -78,6 +78,11 @@
 						<a href="http://www.github.com/maryhowell" class="icon fa-github"><span class="label">Github</span></a></p>
 
 				</header>
+				<header>
+					<p>Checkout my resume </br>
+						<a href="https://res.cloudinary.com/unravled/image/upload/v1504140552/MaryHowellResume-website_fsoutz.pdf"  class="icon fa-file-text-o"><span class="label">Resume</span></a></p>
+
+				</header>
 				<!-- <div class="inner gallery">
 					<div class="row 0%">
 						<div class="3u 12u(mobile)"><a href="images/fulls/01.jpg" class="image fit"><img src="images/thumbs/01.jpg" alt="" title="Ad infinitum" /></a></div>
