--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
 						<a href="https://res.cloudinary.com/unravled/image/upload/v1504140552/MaryHowellResume-website_fsoutz.pdf"  class="icon fa-file-text-o"><span class="label">Resume</span></a></p>
 
 				</header>
+				<!-- add pictures when you have more projects. -->
 				<!-- <div class="inner gallery">
 					<div class="row 0%">
 						<div class="3u 12u(mobile)"><a href="images/fulls/01.jpg" class="image fit"><img src="images/thumbs/01.jpg" alt="" title="Ad infinitum" /></a></div>
